bk_ida/gccida/c3/initialize_uninitialized_subregs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1885:4: error: expected ';' after expression
rtx x; // [rsp+8h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1885:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+8h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1888:4: error: expected ';' after expression
rtx v20; // [rsp+20h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1888:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // [rsp+20h] [rbp-38h] 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1879:18: note: 'v10' declared here
unsigned __int64 v10; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1916:1: error: use of undeclared identifier 'x'
x = insns; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1922:1: error: use of undeclared identifier 'x'
x = insns; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1927:16: error: use of undeclared identifier 'x'
for_each_rtx( &x, find_regno_partial, &data); 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1928:6: error: use of undeclared identifier 'v20'; did you mean 'v10'?
if ( v20 ) 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1879:18: note: 'v10' declared here
unsigned __int64 v10; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1930:34: error: expected expression
v9 = gen_move_insn( v20, *( rtx *)( ( char *)const_tiny_rtx[0] + ( ( *( _DWORD *)v20 >> 13) & 0x7F8))); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1930:82: error: use of undeclared identifier 'v20'
v9 = gen_move_insn( v20, *( rtx *)( ( char *)const_tiny_rtx[0] + ( ( *( _DWORD *)v20 >> 13) & 0x7F8))); 
                                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1930:21: error: use of undeclared identifier 'v20'; did you mean 'v10'?
v9 = gen_move_insn( v20, *( rtx *)( ( char *)const_tiny_rtx[0] + ( ( *( _DWORD *)v20 >> 13) & 0x7F8))); 
                    ^~~
                    v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1879:18: note: 'v10' declared here
unsigned __int64 v10; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1952:1: error: use of undeclared identifier 'x'
x = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1958:1: error: use of undeclared identifier 'x'
x = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1963:16: error: use of undeclared identifier 'x'
for_each_rtx( &x, find_regno_partial, &data); 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1964:6: error: use of undeclared identifier 'v20'; did you mean 'v10'?
if ( v20 ) 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1879:18: note: 'v10' declared here
unsigned __int64 v10; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1966:35: error: expected expression
v15 = gen_move_insn( v20, *( rtx *)( ( char *)const_tiny_rtx[0] + ( ( *( _DWORD *)v20 >> 13) & 0x7F8))); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1966:83: error: use of undeclared identifier 'v20'
v15 = gen_move_insn( v20, *( rtx *)( ( char *)const_tiny_rtx[0] + ( ( *( _DWORD *)v20 >> 13) & 0x7F8))); 
                                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1966:22: error: use of undeclared identifier 'v20'; did you mean 'v10'?
v15 = gen_move_insn( v20, *( rtx *)( ( char *)const_tiny_rtx[0] + ( ( *( _DWORD *)v20 >> 13) & 0x7F8))); 
                     ^~~
                     v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/flow.c:1879:18: note: 'v10' declared here
unsigned __int64 v10; // r14 
                 ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/initialize_uninitialized_subregs/src/obj/flow.o] Error 1
